# frontier-platform

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  test-questions.md
azure-functions/: function_app.py  local.settings.json  requirements.txt
docs/: infrastructure.md
sample-data/: sample-loan-application.md
sample-data/risk-assessment/: README.md  credit_risk_policies.json  credit_risk_scoring_model.json  extracted_data_schema.json  historical_cases.json  index_schema.json  regulatory_guidelines.json  risk_agent_prompt.md  sample_extracted_data.json  sample_risk_assessment_output.json
src/customer-order-assistant/: function_app.py  local.settings.json  mcp_server.py  requirements.txt  sample_orders.json  upload_orders.py
src/loan_processor/: __init__.py  config.py  health_check.py  local_mcp_server.py  mcp_server.py  stdio_server.py
src/workflows/: eval-prompt.md
workflows/: websearch-loan-workflow.yaml
